# Empowered-by-technology

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  README.md  alembic.ini  app.py  database.py  docker-compose.yml  job_helper.db  pyproject.toml  requirements.txt  third_party_integration.py
.github/workflows/: ci-cd.yml
k8s/: README.md  app-deployment.yaml  configmap.yaml  grafana.yaml  hpa.yaml  minio-deployment.yaml  mysql-deployment.yaml  namespace.yaml  prometheus.yaml  redis-deployment.yaml  secret.yaml
mobile_app/android/: local.properties
mobile_app/android/app/: build.gradle
mobile_app/ios/: Podfile
mobile_app/ios/Runner/: Info.plist
mobile_app/lib/: main.dart
mobile_app/lib/components/: custom_card.dart  loading_indicator.dart  message_snackbar.dart
mobile_app/lib/config/: app_config.dart
mobile_app/lib/models/: feedback.dart  job.dart  post.dart  third_party.dart  user.dart
mobile_app/lib/providers/: auth_provider.dart
mobile_app/lib/screens/: community_screen.dart  enterprise_screen.dart  feedback_screen.dart  home_screen.dart  interview_screen.dart  job_recommendation_screen.dart  login_screen.dart  profile_screen.dart  register_screen.dart  third_party_services_screen.dart
mobile_app/lib/services/: auth_service.dart  community_service.dart  feedback_service.dart  job_service.dart  third_party_service.dart  user_service.dart
src/ai_job_helper/: __init__.py  main.py
src/app/: main.py
src/database/: __init__.py  models.py
tests/: run_tests.py  test_auth_service.py  test_auth_utils.py
(+12 files in other folders)
